# jpeg_turbo_resizer_flutter

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: jpeg_turbo_resizer.dart  jpeg_turbo_resizer_method_channel.dart  jpeg_turbo_resizer_platform_interface.dart
test/: jpeg_turbo_resizer_method_channel_test.dart  jpeg_turbo_resizer_test.dart
windows/: CMakeLists.txt  jpeg_turbo_resizer_plugin.cpp  jpeg_turbo_resizer_plugin.h  jpeg_turbo_resizer_plugin_c_api.cpp
windows/include/jpeg_turbo_resizer/: jpeg_turbo_resizer_plugin_c_api.h
windows/libjpeg-turbo/lib/: turbojpeg.lib
windows/test/: jpeg_turbo_resizer_plugin_test.cpp
